fixed spacing/responsive

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -39,7 +39,7 @@
     display: flex;
     flex-direction: column;
 
-    padding: 340px 0px;
+    padding: 240px 0px;
     gap: 10px;
 
     width: 1440px;
