--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -13,6 +13,8 @@
     
 }
 
+
+
 #profile-pic {
     
     width: 300px;
@@ -20,10 +22,18 @@
     
     
     /* Inside auto layout */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
     
     flex: none;
-    order: 0;
+    order: 1;
     flex-grow: 0;
+
+    float: right;
+    margin-right: 500px;
 }
 
 h3 {
@@ -147,6 +157,23 @@ table {
         width: auto;
         
     }
+
+    #profile-pic {
+        height: 100px;
+        width: 100px;
+        text-align: left;
+        padding-right: 700px;
+    }
+
+   .top-container {
+    padding-bottom: 200px;
+   }
+
+   
+   .navbar {
+    padding: auto;
+   }
+
   }
 
   @media only screen and (min-width: 1565px ) {
@@ -155,5 +182,6 @@ table {
         width: auto;
         padding-right: 270px;
     }
+    
   }
 
