--- a/src/styles/Work.css
+++ b/src/styles/Work.css
@@ -1,13 +1,13 @@
 .top-container  {
     width: 1439px;
-height: 483.55px;
+    height: 483.55px;
 
 
-/* Inside auto layout */
+    /* Inside auto layout */
 
-flex: none;
-order: 3;
-flex-grow: 0;  
+    flex: none;
+    order: 3;
+    flex-grow: 0;  
 }
 
 h5 {
@@ -32,32 +32,22 @@ h5 {
     flex-grow: 0;
 }
 
-img {
-    box-sizing: border-box;
-
-
-    width: 390px;
-    height: 230px;
-    left: 0px;
-    top: 0px;
-    
-}
 
 h2 {
     display: flex;
-flex-direction: column;
-align-items: flex-start;
-padding: 0px;
-gap: 8px;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 8px;
 
-width: 390px;
-height: 86px;
+    width: 390px;
+    height: 86px;
 
 
-/* Inside auto layout */
+    /* Inside auto layout */
 
-flex: none;
-order: 1;
-flex-grow: 0;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
 }
 
